@@ -156,3 +156,4 @@ Fixes:
     * Prevent denial of service on eina_hash function.
     * Fix return type of function ecore_wl_outputs_get().
     * Fix memleak in Eina_File.
+    * Fix ecore_x_screen_is_composited/set() to work on multihead.
