@@ -1,3 +1,8 @@
+2013-02-08  Carsten Haitzler (The Rasterman)
+
+        * Fix ecore_x ecore_x_screen_is_composited/set() to work
+        properly on multihead.
+
 2013-02-07  Christopher Michael (devilhorns)
 
         * Added ecore_x_randr_crtc_info_free function.
